--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.19",
         "cross-env": "^7.0",
         "laravel-echo": "^1.15.1",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
+        "postcss": "^8.4.6",
         "pusher-js": "^8.0.2",
         "resolve-url-loader": "^3.1.0",
+        "tailwindcss": "^3.1.0",
         "webpack-cli": "^5.0.2"
     }
 }
